--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="refresh" content="0; url=./README.md">
+    <meta http-equiv="refresh" content="0; url=./">
     <title>English Grammar Rules</title>
     <style>
         body {
@@ -49,7 +49,7 @@
     <div class="container">
         <h1>📚 English Grammar Rules</h1>
         <p>Redirecting to the main page...</p>
-        <p>If you are not redirected automatically, <a href="./README.md">click here</a>.</p>
+        <p>If you are not redirected automatically, <a href="./">click here</a>.</p>
     </div>
 </body>
 </html>
